<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gladio</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="app_id">521541597939497</string>
    <string name="admob_id">a1522389fed3528</string>
    <string name="unlicensed_dialog_body">This application is not licensed for this user. Please purchase it from Android Market.</string>
    <string name="configure_app">Configuring application...</string>
    <string name="fetch_details">Fetching user details...</string>
    <string name="registering">Registering user....</string>
    <string name="press_button">Please press only when in an emergency!</string>
    <string name="alert_text">PLEASE HELP ME !! I am in danger and i need your help immediately. My current location is  </string>
    <string name="confirm_click_alert">Please click two or more times to confirm the alert within 5 Seconds.</string>
    <string name="alert_received">An alart received From </string>
    <string name="no_internet">No Internet Connection.Please check your network settings.</string>
     
     
    <!-- Setting Screen Strings -->
    
    <string name="str_btn_settings">Settings</string>
	<string name="str_btn_show">Show Values</string>
	
	<string name="str_facebook">Facebook</string>
	<string name="str_facebook_desc">Add Facebook Friends</string>
	<string name="str_facebook_desc_long">Add facebook friends that you wish to contact in emergency.</string>
	
	<string name="str_contacts">Contacts</string>
	<string name="str_contacts_desc">Add phone Contacts</string>
	<string name="str_contacts_desc_long">Add  phone contacts that you wish to contact in emergency.</string>
	
	<string name="str_buzzer">Buzzer</string>
	<string name="str_buzzer_desc">Set Buzzer</string>  
	<string name="str_buzzer_desc_long">Enable Siren Buzzer.</string> 
	
	<string name="str_friends">Friends</string>
	<string name="str_friends_desc">Inform Friends via Facebook</string>
	<string name="str_friends_desc_long">Enable alerting your friends via facebook chat message and timeline post</string>
	
	<string name="str_volunteer">Volunteer</string>
	<string name="str_volunteer_desc">I am a Volunteer</string>
	<string name="str_volunteer_desc_long">Enable this to subscribe user as a volunteer.A volunteer can accept alerts from all near by users.</string>
	
	<string name="str_pattern">Pattern</string>
	<string name="str_pattern_desc">Pattern Security</string>
	<string name="str_pattern_desc_long">Save your current settings with a pattern lock.Recommended</string>
	
	<string name="full_name">Full Name</string>
	<string name="phon_number">Phone Number</string>
	<string name="terms_use">Terms of Use</string>
	<string name="terms"><u>Terms&amp;Conditions</u></string>
	<string name="version">Version:</string>
	<string name="register">Register</string>
	<string name="enter_mob_number">Please Enter Your Mobile number and Name to proceed</string>
	<string name="ImageUrl">urlforimageview</string>
	 <string name="done">Done</string>
	
	
	
	
	<!-- Pattern Lock -->
    
    <string name="alp_cmd_confirm">Confirm</string>
    <string name="alp_cmd_continue">Continue</string>
    <string name="alp_cmd_retry">Retry</string>
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_msg_connect_4dots">Connect at least 4 dots.\nTry again…</string>
    <string name="alp_msg_draw_an_unlock_pattern">Draw an unlock pattern:</string>
    <string name="alp_msg_draw_pattern_to_unlock">Draw pattern to unlock:</string>
    <string name="alp_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_msg_redraw_pattern_to_confirm">Redraw pattern to confirm:</string>
    <string name="alp_msg_release_finger_when_done">Release finger when done</string>
    <string name="alp_msg_try_again">Sorry, try again</string>
    <string name="alp_msg_your_new_unlock_pattern">Your new unlock pattern:</string>
    <string name="alp_pmsg_connect_x_dots">Connect at least %1$d dots.\nTry again…</string>
    
    
    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll. -->
    <string name="alphabet">#ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="search_match_other">Matches Other Field</string>

    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    
   
    <string name="save">Save</string>
    <string name="announce">Announce</string>
    <string name="contacts_name">name</string>
    <string name="loading">Loading...</string>
    <string name="dialog_description">Application need your username and phone number.</string>
    <string name="error_login">Error in login</string>
    
    
    <!-- Share-->
    <string name="email">Email</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="location_warn">Requires either GPS or GPRS for tracking the location.Please enable it from the phone settings.</string>
    <string name="share_msg">Download Gladio Security Mobile application and be safe</string>
    <string name="share_link">https://play.google.com/store/apps/details?id=%s</string>
    
    
    <!-- Share -->
    <string name="fb_share_name">Gladio mobile application for Android</string>
    <string name="fb_share_caption">Gladio - Personal Security Alert Agent</string>
    <string name="fb_share_desciption">Use Gladio to immediately inform chosen contacts and send sms and emails, posts on Facebook, voice calls, alerts and notifications to multiple contacts chosen by you in a distress situation.Download today from Google Play!</string>
   
    <string name="tw_share_desciption">Use Gladio to immediately inform chosen contacts,send sms,emails,post on Facebook and Twitter when in distress, download now from Google Play</string>
    
    
    <string name="fb_share_picture">http://%s/twsa/web/images/gladio_icon.png</string>
    
     <!-- Share -->
    <string name="twitter_api_key">y8bPTLU3rmiIG96gLQJ9w</string>
    <string name="twitter_api_secret">GRVTONBioqyDO9SjpBJGcLh6SvdHGBc567qOO3uWqE</string>
    <string name="sharing">Sharing into Twitter..</string>
    <string name="login_text">GRVTONBioqyDO9SjpBJGcLh6SvdHGBc567qOO3uWqE</string>
    <string name="logout_text">Sharing into Twitter..</string>
    
    <string name="cant_load">Unable to load the Facebook friends</string>
    <string name="cant_load_contact">Unable to load the contacts</string>
    <string name="search_hint">Search by name</string>
    <string name="action_search">Search</string>
    
    
     
</resources>
